--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -4,6 +4,11 @@
     <%- include("../partials/head") %>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/productDetailStyles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/productDetailStyles.css">
+    <link rel="stylesheet" href="/css/productCartStyles.css">
+    <script src="/js/productCardForCart.js"></script>
+
     <title>Detalle</title>
 </head>
 
@@ -50,10 +55,23 @@
                 </div>
 
                 <div>
-                    <button class="cta-add-to-car">
-                        <i class="fas fa-cart-plus"></i>
-                        Agregar al carrito
-                    </button>
+                    <form method="post" action="/addItem">
+                        <div class="number-of-items">
+                            <button class="removeItem">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                            <input type="number" name="quantity" class="quantity" min="1">
+                            <input name="idProduct" type="number" value="<%=item.product_id%>" style="display: none;">
+                            <button class="addItem">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                        </div>
+                        <button type="submit" class="cta-add-to-car">
+                            <i class="fas fa-cart-plus"></i>
+                            Agregar al carrito
+                        </button>
+                    </form>
+
                 </div>
 
                 <a href="/products/edit/<%= item.product_id %>">
